<package>
  <description>StereoImuRos</description>
  <name>StereoImuRos</name>
  <version>0.0.0</version>
  <author>Campos, KOBOSP</author>
  <maintainer email="Campos@Campos.Campos">Campos</maintainer>
  <license>GPLv3</license>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>



